update morphia to 1.6.1 and mongo driver to 4.7.2, + updates for removed deprecations #EA-3647