@@ -1,10 +1,9 @@
 package eu.europeana.api.commons.nosql.dao.impl;
 
 import java.io.Serializable;
-
-import org.mongodb.morphia.Datastore;
-import org.mongodb.morphia.dao.BasicDAO;
-
+import com.mongodb.ReadPreference;
+import dev.morphia.Datastore;
+import dev.morphia.dao.BasicDAO;
 import eu.europeana.api.commons.nosql.dao.NosqlDao;
 import eu.europeana.api.commons.nosql.entity.NoSqlEntity;
 /**
@@ -24,7 +23,7 @@ public class NosqlDaoImpl<E extends NoSqlEntity, T extends Serializable> extends
 	 */
 	public NosqlDaoImpl(Datastore datastore, Class<E> clazz) {
 		super(clazz, datastore);
-		datastore.getDB().slaveOk();
+		datastore.getDB().setReadPreference(ReadPreference.secondaryPreferred());
 		this.clazz = clazz;
 	}
 
@@ -35,7 +34,7 @@ public class NosqlDaoImpl<E extends NoSqlEntity, T extends Serializable> extends
 	@Override
 	public void deleteAll() {
 		try {
-			delete(clazz.newInstance());
+			delete(clazz.getDeclaredConstructor().newInstance());
 		} catch (Exception e) {
 		}
 	}
